Get JSON-LD cookin’.

--- a/src/components/FeaturedRepos.astro
+++ b/src/components/FeaturedRepos.astro
@@ -2,7 +2,7 @@
 /**
  * Featured repository cards used on the homepage.
  */
-import { GITHUB_REPO } from "../config"
+import { GITHUB_REPO } from "../const"
 import RepoCard from "./RepoCard.astro"
 
 const repos = [
