--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import {
   COPYRIGHT_HOLDER,
   TWITTER_URL,
   GITHUB_URL,
-} from "../config"
+} from "../const"
 
 import Icon from "./Icon.astro"
 
