--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 /**
  * Global site header.
  */
-import { GITHUB_URL, DOCUMENTATION_URL } from "../config"
+import { GITHUB_URL, DOCUMENTATION_URL } from "../const"
 import { MagnifyingGlassIcon } from "@heroicons/react/24/solid/index.js"
 ---
 
