--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import {
   getSponsors,
   getReleases,
 } from "../lib/api"
-import { GITHUB_REPO } from "../config"
+import { GITHUB_REPO } from "../const"
 
 const title = `About DDEV`
 const repoData = await getRepoDetails(GITHUB_REPO)
