--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -7,7 +7,7 @@ import {
   DISCORD_URL,
   DOCUMENTATION_URL,
   GITHUB_URL,
-} from "../config"
+} from "../const"
 import Sponsors from "../components/Sponsors.astro"
 import { Img } from "astro-imagetools/components"
 
