--- a/src/components/Sponsors.astro
+++ b/src/components/Sponsors.astro
@@ -1,5 +1,6 @@
 ---
 import { getSponsors } from "../lib/api"
+import { Img } from "astro-imagetools/components"
 
 const gitHubSponsors = await getSponsors()
 
@@ -27,7 +28,18 @@ const { size = "normal", align = "left" } = Astro.props
           href={sponsor.url}
           target="_blank"
         >
-          <img src={sponsor.avatarUrl} class="block w-full h-full" />
+          <Img
+            src={sponsor.avatarUrl}
+            alt={`${sponsor.login} GitHub avatar`}
+            width={100}
+            height={100}
+            breakpoints={{ count: 1, maxWidth: 100 }}
+            attributes={{
+              img: {
+                class: `block w-full h-full`,
+              },
+            }}
+          />
         </a>
       ))
     }
