Improve contrast and link text.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -97,6 +97,7 @@ const navigation = {
               }`}
             >
               <Icon name={item.name} />
+              <span class="hidden">{item.name}</span>
             </a>
           ))
         }
