--- a/src/components/CtaButton.astro
+++ b/src/components/CtaButton.astro
@@ -7,8 +7,8 @@ export interface Props {
 }
 
 const typeClasses = {
-  default: `border border-transparent text-white bg-blue-600 hover:bg-blue-700`,
-  hollow: `border border-blue-600 text-blue-600 hover:border-blue-700 hover:text-blue-700`,
+  default: `border border-transparent text-white bg-blue-650 hover:bg-blue-800`,
+  hollow: `border border-blue-650 text-blue-650 hover:border-blue-800 hover:text-blue-800`,
 }
 
 const { text, href, type = "default", target } = Astro.props
@@ -16,7 +16,7 @@ const { text, href, type = "default", target } = Astro.props
 
 <a
   href={href}
-  class={`w-full mx-2 flex items-center justify-center px-8 py-3 text-base font-medium rounded-md md:py-4 md:text-lg md:px-10 ` +
+  class={`w-full mx-2 flex items-center justify-center px-8 py-3 text-base font-bold rounded-md md:py-4 md:text-lg md:px-10 ` +
     typeClasses[type]}
   target={target}
 >
