--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -36,6 +36,7 @@ import { MagnifyingGlassIcon } from "@heroicons/react/24/solid/index.js"
       </ul>
       <a href="/search" class="ml-4"
         ><MagnifyingGlassIcon className="w-6 h-6" />
+        <span class="hidden">Search</span>
       </a>
     </div>
   </nav>
