--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -33,7 +33,7 @@ const { title, subtitle, date, author, authorUrl, authorAvatar, readTime } =
         <div class="flex items-center content-center mr-2">
           {authorAvatar && (
             <div class="rounded-full overflow-hidden mr-2">
-              <img src={authorAvatar} alt={author} class="block w-12 h-12" />
+              <img src={authorAvatar} alt={`${author} avatar`} class="block w-12 h-12" />
             </div>
           )}
           {author && (
