--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -267,13 +267,13 @@ const latestRelease = await getLatestReleaseVersion()
           </Fragment>
         </Tabs>
 
-        <aside class="bg-gray-200 p-8 rounded-lg mt-36">
+        <div class="bg-gray-200 p-8 rounded-lg mt-36">
           <h2 class="mt-0">Join the DDEV Community</h2>
           <p class="mb-0">
             DDEV is an open source project with a growing community, and there
             are lots of ways to <a href="/support-ddev">get involved</a>!
           </p>
-        </aside>
+        </div>
       </div>
     </div>
 
@@ -365,13 +365,13 @@ const latestRelease = await getLatestReleaseVersion()
       <div class="prose">
         <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
 
-        <aside class="bg-gray-200 p-8 rounded-lg mt-36">
+        <div class="bg-gray-200 p-8 rounded-lg mt-36">
           <h2 class="mt-0">Join the DDEV Community</h2>
           <p class="mb-0">
             DDEV is an open source project with a growing community, and there
             are lots of ways to <a href="/support-ddev">get involved</a>!
           </p>
-        </aside>
+        </div>
       </div>
     </div>
 
@@ -471,13 +471,13 @@ const latestRelease = await getLatestReleaseVersion()
       <div class="prose">
         <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
 
-        <aside class="bg-gray-200 p-8 rounded-lg mt-36">
+        <div class="bg-gray-200 p-8 rounded-lg mt-36">
           <h2 class="mt-0">Join the DDEV Community</h2>
           <p class="mb-0">
             DDEV is an open source project with a growing community, and there
             are lots of ways to <a href="/support-ddev">get involved</a>!
           </p>
-        </aside>
+        </div>
       </div>
     </div>
 
@@ -598,13 +598,13 @@ const latestRelease = await getLatestReleaseVersion()
           <Code code={`→ ddev describe`} lang="bash" theme={codeTheme} />
         </Terminal>
 
-        <aside class="bg-gray-200 p-8 rounded-lg mt-36">
+        <div class="bg-gray-200 p-8 rounded-lg mt-36">
           <h2 class="mt-0">Join the DDEV Community</h2>
           <p class="mb-0">
             DDEV is an open source project with a growing community, and there
             are lots of ways to <a href="/support-ddev">get involved</a>!
           </p>
-        </aside>
+        </div>
       </div>
     </div>
   </main>
