--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -126,6 +126,7 @@ const title = `Search`
   <main class="max-w-4xl mx-auto mb-24">
     <Heading title={title} />
     <div class="max-w-3xl">
+      <label for="search-keywords" class="hidden">Search Keywords</label>
       <input
         id="search-keywords"
         type="search"
