--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -96,8 +96,8 @@ const navigation = {
                 item.name == "Discord" ? `w-5` : `w-6`
               }`}
             >
-              <Icon name={item.name} />
-              <span class="hidden">{item.name}</span>
+              <span class="sr-only">{item.name}</span>
+              <Icon name={item.name} aria-hidden="true" />
             </a>
           ))
         }
