Update Windows instructions + add Composer note.

--- a/src/pages/get-started.astro
+++ b/src/pages/get-started.astro
@@ -151,6 +151,14 @@ const latestRelease = await getLatestReleaseVersion()
         <Terminal>
           <Code code={`→ ddev start`} lang="bash" theme={codeTheme} />
         </Terminal>
+
+        <p>
+          If it’s a Composer project, you may also need to run <a
+            href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#composer"
+            target="_blank"
+            ><code>ddev composer install</code>
+          </a>.
+        </p>
       </div>
 
       <div class="prose">
@@ -310,15 +318,12 @@ const latestRelease = await getLatestReleaseVersion()
         <p>Verify that you now have an Ubuntu distro set as default:</p>
 
         <Terminal type="powershell">
-          <Code code={`> wsl.exe -l -v`} lang="bash" theme={codeTheme} />
+          <Code
+            code={`> wsl -l -v\n  NAME                   STATE           VERSION\n* Ubuntu-20.04           Stopped         2`}
+            lang="bash"
+            theme={codeTheme}
+          />
         </Terminal>
-
-        <p>
-          Bonus: to keep WSL2 up to date, visit <i>Windows Update Settings</i> →
-          <i>Advanced Options</i>, and enable <i
-            >Receive updates for other Microsoft products</i
-          >.
-        </p>
       </div>
 
       <div class="prose">
@@ -343,7 +348,7 @@ const latestRelease = await getLatestReleaseVersion()
         </p>
         <Terminal type="powershell-ubuntu">
           <Code
-            code={`> ddev -v\nddev version ${latestRelease}`}
+            code={`$ ddev -v\nddev version ${latestRelease}`}
             lang="bash"
             theme={codeTheme}
           />
@@ -357,13 +362,138 @@ const latestRelease = await getLatestReleaseVersion()
         </h2>
 
         <p>Navigate to a project you’d like to spin up with DDEV:</p>
-        <Terminal type="powershell">
-          <Code code={`> cd ~/dev/my-project`} lang="bash" theme={codeTheme} />
+        <Terminal type="powershell-ubuntu">
+          <Code code={`$ cd ~/dev/my-project`} lang="bash" theme={codeTheme} />
         </Terminal>
+
+        <p>
+          Initialize the project by running the <a
+            href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#config"
+            target="_blank"
+            ><code>ddev config</code>
+          </a> command:
+        </p>
+        <Terminal type="powershell-ubuntu">
+          <Code code={`$ ddev config`} lang="bash" theme={codeTheme} />
+        </Terminal>
+
+        <p>
+          Start the project for the first time. You’ll use the same command to
+          start it later, too!
+        </p>
+        <Terminal type="powershell-ubuntu">
+          <Code code={`$ ddev start`} lang="bash" theme={codeTheme} />
+        </Terminal>
+
+        <p>
+          If it’s a Composer project, you may also need to run <a
+            href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#composer"
+            target="_blank"
+            ><code>ddev composer install</code>
+          </a>.
+        </p>
       </div>
 
       <div class="prose">
         <h2 class="text-3xl mt-24">Explore & Enjoy!</h2>
+
+        <p>
+          Take a peek at your project’s new <code>.ddev/</code> directory. You can
+          add this to your repo to share your DDEV config, edit <code
+            >.ddev/ddev.yaml</code
+          > to change <a
+            href="https://ddev.readthedocs.io/en/latest/users/configuration/config/"
+            target="_blank">project options</a
+          >, or even go about your business and pretend this folder doesn’t
+          exist.
+        </p>
+
+        <p>
+          Run the <a
+            href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#help"
+            target="_blank"
+            >help command
+          </a> (or plain <code>ddev</code>) to see the actions you can take with
+          the CLI:
+        </p>
+
+        <Terminal type="powershell-ubuntu">
+          <Code code={`$ ddev -h`} lang="bash" theme={codeTheme} />
+        </Terminal>
+
+        <p>
+          Use the <a
+            href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#describe"
+            target="_blank"
+            >describe command
+          </a> to see a project’s parts and database connection details:
+        </p>
+
+        <Terminal type="powershell-ubuntu">
+          <Code code={`$ ddev describe`} lang="bash" theme={codeTheme} />
+        </Terminal>
+
+        <p>
+          If you’re done working on a project and want to shut it down without
+          removing anything, use the <a
+            href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#stop"
+            target="_blank"
+            >stop command
+          </a>:
+        </p>
+
+        <Terminal type="powershell-ubuntu">
+          <Code code={`$ ddev stop`} lang="bash" theme={codeTheme} />
+        </Terminal>
+
+        <p>
+          If you were just kicking the tires and you want to permanently delete
+          the project and its resources without touching your code, run the <a
+            href="https://ddev.readthedocs.io/en/latest/users/usage/commands/#delete"
+            target="_blank"
+            >delete command
+          </a>:
+        </p>
+
+        <Terminal type="powershell-ubuntu">
+          <Code code={`$ ddev delete`} lang="bash" theme={codeTheme} />
+        </Terminal>
+
+        <p>
+          DDEV will remove everything it created for the project and have no
+          memory of its existence.
+        </p>
+
+        <p>
+          To uninstall DDEV, first clean up its Docker bits and delete its files
+          from your system:
+        </p>
+
+        <Terminal type="powershell-ubuntu">
+          <Code
+            code={`$ ddev clean --all\n$ ddev hostname --remove-inactive\n$ rm -r ~/.ddev`}
+            lang="bash"
+            theme={codeTheme}
+          />
+        </Terminal>
+
+        <p>
+          Remove the <code>ddev</code> binary from the WSL2 distro:
+        </p>
+
+        <Terminal type="powershell-ubuntu">
+          <Code
+            code={`$ sudo rm /usr/bin/ddev`}
+            lang="bash"
+            theme={codeTheme}
+          />
+        </Terminal>
+
+        <p>
+          Lastly, remove DDEV from Windows by visiting <i
+            >Add or remove programs</i
+          >, finding “DDEV Local”, and choosing <i>Uninstall</i>.
+        </p>
 
         <div class="bg-gray-200 p-8 rounded-lg mt-36">
           <h2 class="mt-0">Join the DDEV Community</h2>
