Rough in Linux steps with links.

--- a/src/components/quickstart/Linux.astro
+++ b/src/components/quickstart/Linux.astro
@@ -23,22 +23,61 @@ const { latestVersion } = Astro.props
     <Fragment slot="tab-4">Fedora</Fragment>
     <Fragment slot="panel-1">
       <div class="prose py-5">
-        <Terminal type="ubuntu" code={`$ boop`} />
+        <p>
+          Follow the <a
+            href="https://docs.docker.com/engine/install/ubuntu/"
+            target="_blank">instructions on docs.docker.com</a
+          >:
+        </p>
+        <Terminal
+          type="ubuntu"
+          code={`$ sudo apt-get update\n$ sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin`}
+        />
       </div>
     </Fragment>
     <Fragment slot="panel-2">
       <div class="prose py-5">
-        <Terminal type="ubuntu" code={`$ boop`} />
+        <p>
+          Follow the <a
+            href="https://docs.docker.com/engine/install/centos/"
+            target="_blank">instructions on docs.docker.com</a
+          >:
+        </p>
+
+        <Terminal
+          type="ubuntu"
+          code={`$ sudo yum remove docker /\ \n    docker-client /\ \n    docker-client-latest /\ \n    docker-common /\ \n    docker-latest /\ \n    docker-latest-logrotate /\ \n    docker-logrotate /\ \n    docker-engine\n$ sudo yum install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin\n$ sudo systemctl start docker`}
+        />
       </div>
     </Fragment>
     <Fragment slot="panel-3">
       <div class="prose py-5">
-        <Terminal type="ubuntu" code={`$ boop`} />
+        <p>
+          Follow the <a
+            href="https://docs.docker.com/engine/install/debian/"
+            target="_blank">instructions on docs.docker.com</a
+          >:
+        </p>
+
+        <Terminal
+          type="ubuntu"
+          code={`$ sudo apt-get remove docker docker-engine docker.io containerd runc\n$ sudo apt-get update\n$ sudo apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin`}
+        />
       </div>
     </Fragment>
     <Fragment slot="panel-4">
       <div class="prose py-5">
-        <Terminal type="ubuntu" code={`$ boop`} />
+        <p>
+          Follow the <a
+            href="https://docs.docker.com/engine/install/fedora/"
+            target="_blank">instructions on docs.docker.com</a
+          >:
+        </p>
+
+        <Terminal
+          type="ubuntu"
+          code={`$ sudo dnf remove docker /\ \n    docker-client /\ \n    docker-client-latest /\ \n    docker-common /\ \n    docker-latest /\ \n    docker-latest-logrotate /\ \n    docker-logrotate /\ \n    docker-selinux /\ \n    docker-engine-selinux /\ \n    docker-engine\n$ sudo dnf install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin\n$ sudo systemctl start docker`}
+        />
       </div>
     </Fragment>
   </Tabs>
