--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,6 @@
  * The large, leading copy and image used on the homepage.
  */
 import CtaButton from "../components/CtaButton.astro"
-import Terminal from "./Terminal.astro"
 
 const panels = [
   {
@@ -50,6 +49,31 @@ Project can be reached at https://my-project.ddev.site https://127.0.0.1:51046`,
 ]
 ---
 
+<style is:global lang="postcss">
+  .terminal-wrapper {
+    @apply rounded-lg;
+    background: #2e3440;
+  }
+
+  .terminal-wrapper .top-bar {
+    &.powershell {
+      @apply justify-between text-white;
+      background: #1f2023;
+    }
+    &.powershell-ubuntu {
+      @apply justify-between text-white;
+      background: #1f2023;
+    }
+    &.ubuntu {
+      @apply justify-end;
+    }
+  }
+
+  .prose .terminal-wrapper pre {
+    @apply my-0;
+  }
+</style>
+
 <div class="mt-12 py-32 relative overflow-x-hidden">
   <div class="z-10 max-w-4xl mx-auto relative">
     <div class="max-w-2xl">
@@ -75,11 +99,18 @@ Project can be reached at https://my-project.ddev.site https://127.0.0.1:51046`,
 
   <div class="w-full h-72 absolute top-0 z-0" style="right: -40rem;">
     <div class="mx-auto h-full" style="max-width: 49.25rem;">
-      <Terminal>
-        <div class="h-full p-4 text-slate-300 text-xs" style="height: 540px;">
-          <pre>{panels[0].output}</pre>
+      <div class="terminal-wrapper">
+        <div class={`top-bar flex p-3 space-x-2 rounded-t-lg`}>
+          <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
+          <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
+          <div class="block rounded-full bg-slate-500 w-3 h-3"></div>
         </div>
-      </Terminal>
+        <div class="overflow-hidden my-0">
+          <div class="h-full p-4 text-slate-300 text-xs" style="height: 540px;">
+            <pre>{panels[0].output}</pre>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
