Start improving responsiveness.

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -76,7 +76,7 @@ Project can be reached at https://my-project.ddev.site https://127.0.0.1:51046`,
 
 <div class="mt-12 py-32 relative overflow-x-hidden">
   <div class="z-10 max-w-4xl mx-auto relative">
-    <div class="max-w-2xl">
+    <div class="max-w-2xl px-6 lg:px-0">
       <h1 class="text-5xl font-bold">
         Docker-based PHP development environments.
       </h1>
