--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -42,7 +42,7 @@ const navigation = {
 ---
 
 <footer>
-  <div class="max-w-4xl mx-auto py-12 lg:py-16">
+  <div class="max-w-4xl mx-auto py-12 px-6 lg:px-0 lg:py-16">
     <div class="pb-8 xl:grid xl:grid-cols-3 xl:gap-8">
       <div class="grid grid-cols-2 gap-8 xl:col-span-4">
         <div class="md:grid md:grid-cols-2 md:gap-8">
@@ -62,7 +62,7 @@ const navigation = {
               }
             </ul>
           </div>
-          <div>
+          <div class="mt-12 md:mt-0">
             <h3 class="text-sm font-mono text-navy-300 tracking-wider">
               Product
             </h3>
@@ -102,7 +102,9 @@ const navigation = {
           ))
         }
       </div>
-      <p class="mt-8 text-sm text-gray-600 font-mono md:mt-0 md:order-1">
+      <p
+        class="mt-8 text-sm text-gray-600 font-mono text-center md:text-left md:mt-0 md:order-1"
+      >
         &copy; {new Date().getFullYear()}
         {COPYRIGHT_HOLDER}
       </p>
